优化训练信息显示，并添加打包内容

--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "build":{
     "appId": "com.WizAiTool.2024101101",
     "productName": "WizAiTool",
+    "files":[
+      "maix_train/**/*",  
+      "py39/**/*", 
+      "out/**/*"
+    ],
     "win":{
       "icon":"icons/visionwiz_logo.ico",
       "target": "nsis"
