优先软件打包参数

--- a/package.json
+++ b/package.json
@@ -3,17 +3,31 @@
   "version": "1.0.0",
   "description": "威智的AI工具",
   "main": "main.js",
-  "build":{
+  "build": {
     "appId": "com.WizAiTool.2024101101",
     "productName": "WizAiTool",
-    "files":[
-      "maix_train/**/*",  
-      "py39/**/*", 
+    "files": [
+      "maix_train/**/*",
+      "py39/**/*",
       "out/**/*"
     ],
-    "win":{
-      "icon":"icons/visionwiz_logo.ico",
-      "target": "nsis"
+    "win": {
+      "icon": "icons/visionwiz_logo.ico",
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "ia32",
+            "x64"
+          ],
+          "options": {
+            "oneClick": false,
+            "perMachine": true,
+            "createDesktopShortcut": true,
+            "createStartMenuShortcut": true
+          }
+        }
+      ]
     },
     "electronVersion": "29.4.6"
   },
