更新模型训练输出路径同时优化模型名字

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "rebuild-nodepty": "electron-rebuild -f -w node-pty",
     "rebuild-rob": "electron-rebuild -f -w robotjs",
     "package": "electron-forge package",
-    "make": "electron-forge make --out dist"
+    "make": "electron-forge make"
   },
   "keywords": [
     "AI",
