--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-get-electron-abi.js
+
 
 # 忽略特定目录  
 #生成文件
@@ -31,11 +31,12 @@ forge.config.js
 #开发文件
 Wiz_AI_tool.code-workspace
 crypto_file.js
+check_package.js
+get-electron-abi.js
+npminstall-debug.log
 
 #旧文件 
 index-old.html
-npminstall-debug.log
-
 
 #make-sense相关
 # ide
@@ -46,7 +47,7 @@ npminstall-debug.log
 make-sense/node_modules/  
 make-sense/.pnp/
 make-sense/.pnp.js
-
+make-sense/src/
 # testing
 make-sense/coverage
 
@@ -60,3 +61,4 @@ make-sense/dist/
 .env.development.local
 .env.test.local
 .env.production.local
+
