--- a/package.json
+++ b/package.json
@@ -83,18 +83,6 @@
     "@electron-forge/plugin-fuses": "^7.5.0",
     "@electron/fuses": "^1.8.0",
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.3",
-    "echarts": "^5.5.1",
-    "electron": "^29.4.6",
-    "electron-rebuild": "^3.2.9",
-    "font-awesome": "^4.7.0",
-    "imageinfo": "^1.0.4",
-    "optiscroll": "^3.2.1",
-    "popper.js": "^1.16.1",
-    "silly-datetime": "^0.1.2",
-    "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0",
-    "xterm-addon-web-links": "^0.9.0",
     "@redux-devtools/core": "^3.13.1",
     "@swc/core": "^1.2.218",
     "@swc/jest": "^0.2.22",
@@ -114,15 +102,24 @@
     "@typescript-eslint/parser": "^5.30.7",
     "@vitejs/plugin-react": "^2.0.0",
     "aws-sdk": "^2.1181.0",
+    "bootstrap": "^5.3.3",
+    "echarts": "^5.5.1",
+    "electron": "^29.4.6",
+    "electron-rebuild": "^3.2.9",
     "eslint": "^8.20.0",
     "eslint-plugin-react": "^7.30.1",
+    "font-awesome": "^4.7.0",
     "identity-obj-proxy": "^3.0.0",
+    "imageinfo": "^1.0.4",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "mock-aws-s3": "^4.0.2",
     "nock": "^13.2.9",
+    "optiscroll": "^3.2.1",
+    "popper.js": "^1.16.1",
     "prettier": "^2.7.1",
     "sass": "^1.54.0",
+    "silly-datetime": "^0.1.2",
     "terser": "^5.14.2",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
@@ -130,43 +127,43 @@
     "tslint-react": "^5.0.0",
     "typescript": "4.7.4",
     "vite": "^3.0.2",
-    "vite-tsconfig-paths": "^3.5.0"
-  },
-  "dependencies": {
-    "@popperjs/core": "^2.11.8",
-    "asar": "^3.2.0",
-    "bootstrap": "^5.3.3",
-    "echarts": "^5.5.1",
-    "electron-squirrel-startup": "^1.0.1",
-    "electron-store": "^8.1.0",
-    "font-awesome": "^4.7.0",
-    "imageinfo": "^1.0.4",
-    "nan": "^2.20.0",
-    "node-pty": "^1.0.0",
-    "optiscroll": "^3.2.1",
-    "popper.js": "^1.16.1",
-    "silly-datetime": "^0.1.2",
+    "vite-tsconfig-paths": "^3.5.0",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
-    "xterm-addon-web-links": "^0.9.0",
+    "xterm-addon-web-links": "^0.9.0"
+  },
+  "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.1",
     "@mui/system": "^5.9.1",
-    "@tensorflow-models/coco-ssd": "^2.2.2",
-    "@tensorflow-models/posenet": "^2.2.2",
-    "@tensorflow/tfjs": "^3.19.0",
+    "@popperjs/core": "^2.11.8",
+    "@serialport/bindings-cpp": "^13.0.1",
+    "@serialport/parser-readline": "^13.0.0",
+    "@serialport/stream": "^13.0.0",
+    "@tensorflow-models/coco-ssd": "2.2.2",
+    "@tensorflow/tfjs": "4.2.0",
     "@tensorflow/tfjs-backend-cpu": "^3.19.0",
     "@tensorflow/tfjs-backend-webgl": "^3.19.0",
     "@tensorflow/tfjs-core": "^3.19.0",
-    "@tensorflow/tfjs-node": "^3.19.0",
+    "asar": "^3.2.0",
     "axios": "^1.1.3",
+    "bootstrap": "^5.3.3",
     "classnames": "^2.3.1",
+    "echarts": "^5.5.1",
+    "electron-squirrel-startup": "^1.0.1",
+    "electron-store": "^8.1.0",
     "file-saver": "^2.0.5",
+    "font-awesome": "^4.7.0",
+    "imageinfo": "^1.0.4",
     "jszip": "^3.10.0",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
     "moment": "^2.29.4",
+    "nan": "^2.20.0",
+    "node-pty": "^1.0.0",
+    "optiscroll": "^3.2.1",
+    "popper.js": "^1.16.1",
     "react": "18.2.0",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "18.2.0",
@@ -174,7 +171,12 @@
     "react-redux": "^8.0.2",
     "react-spinners": "^0.13.3",
     "redux": "^4.2.0",
+    "serialport": "^13.0.0",
+    "silly-datetime": "^0.1.2",
     "uuid": "^8.3.2",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0",
+    "xterm-addon-web-links": "^0.9.0",
     "yolov5js": "^1.0.0"
   }
 }
