更新运行脚本指令

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,35 @@ package.js
 utils/cryptoService.js
 authPreload.js
 auth.html
+compile.js
+authPreload_loader.js
+authPreload_protected.jsc
+crypto_file_loader.js
+check_package_protected.jsc
+crypto_file_protected.jsc
+cryptoService_critical_loader.js
+eventManager_loader.js
+eventManager_protected.jsc
+get_project_structure_tree.ps1
+get-electron-abi_protected.jsc
+.gitignore
+main_bootstrap.js
+main_loader.js
+main_protected.jsc
+menu_loader.js
+menu_protected.jsc
+preload_loader.js
+preload_protected.jsc
+project_structure.txt
+protection_report.txt
+windowManger_loader.js
+windowManger_protected.jsc
+utils_protected/cryptoService.jsc
+utils_protected/file_process.jsc
+utils_protected/ipc_commu.jsc
+utils_protected/language-html.jsc
+utils_protected/language-manager.jsc
+utils_protected/path_utils.jsc
+utils_protected/serialManager.jsc
+forge.config - 副本.js
+.electron-cache/electron-v29.4.6-win32-x64.zip
