更新 .gitignore 文件以包含 compile-bytenode.js，调整数据收集和目标检测渲染器的终端高度，修改主窗口创建逻辑以默认最大化窗口，更新 package.json 以修复主文件路径并添加构建脚本

--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,4 @@ utils_protected/path_utils.jsc
 utils_protected/serialManager.jsc
 forge.config - 副本.js
 .electron-cache/electron-v29.4.6-win32-x64.zip
+compile-bytenode.js
