--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.2.0",
   "description": "威智的AI工具",
   "main": "main_bootstrap.js",
+  "main": "main.js",
   "config": {
     "forge": "./forge.config.js"
   },
@@ -63,7 +64,9 @@
     "rebuild-rob": "electron-rebuild -f -w robotjs",
     "package": "node package.js",
     "package-onekey": "npm run compile && node --trace-deprecation package.js",
-    "make": "npm run compile && electron-forge make"
+    "make": "npm run compile && electron-forge make",
+    "rebuild:bytenode_old": "node -e \"require('fs');\" && powershell -Command \"Get-ChildItem -Recurse -Include *.jsc | Remove-Item -Force; $env:ELECTRON_RUN_AS_NODE='1'; & node_modules/.bin/electron node_modules/bytenode/bin/bytenode --compile src/main.js --out build/main.jsc\"",
+    "rebuild:bytenode": "powershell -NoProfile -ExecutionPolicy Bypass -Command \"Get-ChildItem -Recurse -Filter *.jsc | Remove-Item -Force\" && cross-env ELECTRON_RUN_AS_NODE=1 electron ./compile-bytenode.js"
   },
   "keywords": [
     "AI",
@@ -107,6 +110,7 @@
     "@vitejs/plugin-react": "^2.0.0",
     "aws-sdk": "^2.1181.0",
     "bootstrap": "^5.3.3",
+    "cross-env": "^10.0.0",
     "echarts": "^5.5.1",
     "electron": "^29.4.6",
     "electron-rebuild": "^3.2.9",
@@ -120,9 +124,11 @@
     "jest-environment-jsdom": "^28.1.3",
     "mock-aws-s3": "^4.0.2",
     "nock": "^13.2.9",
+    "node-abi": "^3.54.0",
     "optiscroll": "^3.2.1",
     "popper.js": "^1.16.1",
     "prettier": "^2.7.1",
+    "rimraf": "^6.0.1",
     "sass": "^1.54.0",
     "silly-datetime": "^0.1.2",
     "terser": "^5.14.2",
