--- a/package.json
+++ b/package.json
@@ -2,57 +2,9 @@
   "name": "VisionWiz",
   "version": "1.2.0",
   "description": "威智的AI工具",
-  "main": "main.js",
   "main": "main_bootstrap.js",
-  "config": {
-    "forge": "./forge.config.js"
-  },
-  "build": {
-    "appId": "com.WizAiTool.2024101101",
-    "productName": "WizAiTool",
-    "files": [
-      "maix_train/**/*",
-      "py39/**/*",
-      "static/**/*",
-      "tools/**/*",
-      "utils/**/*",
-      "icons/**/*",
-      "compiled/**/*",
-      "loading.html",
-      "mainpage.html",
-      "preload_compiled.js",
-      "windowManger_compiled.js",
-      "menu_compiled.js",
-      "eventManager_compiled.js",
-      "main_compiled.js",
-      "node_modules/bytenode/**/*",
-      {
-        "from": "out",
-        "to": "out",
-        "filter": [
-          "**/*"
-        ]
-      }
-    ],
-    "win": {
-      "icon": "icons/visionwiz_logo.ico",
-      "target": [
-        {
-          "target": "nsis"
-        }
-      ]
-    },
-    "nsis": {
-      "oneClick": false,
-      "perMachine": true,
-      "createDesktopShortcut": true,
-      "createStartMenuShortcut": true,
-      "allowToChangeInstallationDirectory": true,
-      "allowElevation": true
-    },
-    "electronVersion": "29.4.6",
-    "asar": true
-  },
+  "author": "曹振威",
+  "license": "GPL-3.0-or-later",
   "scripts": {
     "test": "vesi_test",
     "prestart:protect": "electron scripts/compile-in-electron-incremental.js",
@@ -63,16 +15,112 @@
     "dev:protectfull": "chcp 65001 && npm run start:protectfull",
     "get-struct": "powershell -ExecutionPolicy Bypass -File get_project_structure_tree.ps1",
     "compile": "node compile.js",
-    "start-forge": "electron-forge start",
+    "compile:inc": "node scripts/compile-in-electron-incremental.js",
     "start": "electron .",
     "start2": "nodemon --watch main.js --exec npm run build",
     "rebuild-nodepty": "electron-rebuild -f -w node-pty",
     "rebuild-rob": "electron-rebuild -f -w robotjs",
-    "package": "node package.js",
-    "package-onekey": "npm run compile && node --trace-deprecation package.js",
-    "make": "npm run compile && electron-forge make",
     "rebuild:bytenode_old": "node -e \"require('fs');\" && powershell -Command \"Get-ChildItem -Recurse -Include *.jsc | Remove-Item -Force; $env:ELECTRON_RUN_AS_NODE='1'; & node_modules/.bin/electron node_modules/bytenode/bin/bytenode --compile src/main.js --out build/main.jsc\"",
-    "rebuild:bytenode": "powershell -NoProfile -ExecutionPolicy Bypass -Command \"Get-ChildItem -Recurse -Filter *.jsc | Remove-Item -Force\" && cross-env ELECTRON_RUN_AS_NODE=1 electron ./compile-bytenode.js"
+    "rebuild:bytenode": "powershell -NoProfile -ExecutionPolicy Bypass -Command \"Get-ChildItem -Recurse -Filter *.jsc | Remove-Item -Force\" && cross-env ELECTRON_RUN_AS_NODE=1 electron ./compile-bytenode.js",
+    "build": "electron-builder",
+    "build:win": "electron-builder --win nsis zip",
+    "build:portable": "electron-builder --win portable",
+    "build:dir": "electron-builder --dir",
+    "package": "node --trace-deprecation package.js",
+    "package-onekey": "npm run compile && node --trace-deprecation package.js",
+    "postinstall": "electron-builder install-app-deps"
+  },
+  "build": {
+    "appId": "com.yourcompany.visionwiz",
+    "productName": "VisionWiz",
+    "directories": {
+      "buildResources": "build",
+      "output": "dist"
+    },
+    "files": [
+      "!**/*.map",
+      "!scripts{,/**}",
+      "!build{,/**}",
+      "!packages{,/**}",
+      "!**/*.code-workspace",
+      "!**/project_structure.txt",
+      "!**/protection_report.txt",
+      "!**/.electron-cache{,/**}",
+      "!**/.electron-builder-cache{,/**}",
+      "!**/.npm-cache{,/**}",
+      "!**/.idea{,/**}",
+      "!**/.vscode{,/**}",
+      "!**/yarn.lock",
+      "!**/npminstall-debug.log",
+      "!make-sense{,/**}",
+      "!**/*.temp",
+      "!**/*.tmp",
+      "!src{,/**}",
+      "main_bootstrap.js",
+      "*_protected.jsc",
+      "*_loader.js",
+      "*_critical_loader.js",
+      "utils_protected{,/**}",
+      "static{,/**}",
+      "feature{,/**}",
+      "icons{,/**}",
+      "locales{,/**}",
+      "auth.html",
+      "mainpage.html",
+      "preload.js",
+      "loading.html"
+    ],
+    "extraResources": [
+      {
+        "from": "py39",
+        "to": "py39"
+      },
+      {
+        "from": "maix_train",
+        "to": "maix_train"
+      },
+      {
+        "from": "tools/WizResizer.exe",
+        "to": "tools/WizResizer.exe"
+      },
+      {
+        "from": "out/trainOutput",
+        "to": "trainOutput"
+      }
+    ],
+    "asar": true,
+    "asarUnpack": [
+      "**/node_modules/node-pty/**"
+    ],
+    "win": {
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64"
+          ]
+        }
+      ],
+      "icon": "icons/visionwiz_logo.ico"
+    },
+    "nsis": {
+      "oneClick": false,
+      "perMachine": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
+      "artifactName": "${productName}-Setup-${version}-${arch}.${ext}",
+      "unicode": true,
+      "installerLanguages": [
+        "zh_CN",
+        "zh_TW",
+        "en_US"
+      ],
+      "include": "build/installer-includes.nsh"
+    },
+    "electronDownload": {
+      "mirror": "https://npmmirror.com/mirrors/electron/"
+    }
   },
   "keywords": [
     "AI",
@@ -84,120 +132,99 @@
     "detection",
     "mobile_net"
   ],
-  "author": "曹振威",
-  "license": "GPL-3.0-or-later",
   "devDependencies": {
-    "@electron-forge/cli": "^7.5.0",
-    "@electron-forge/maker-deb": "^7.5.0",
-    "@electron-forge/maker-rpm": "^7.5.0",
-    "@electron-forge/maker-squirrel": "^7.5.0",
-    "@electron-forge/maker-zip": "^7.5.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.5.0",
-    "@electron-forge/plugin-fuses": "^7.5.0",
-    "@electron/fuses": "^1.8.0",
-    "@popperjs/core": "^2.11.8",
-    "@redux-devtools/core": "^3.13.1",
-    "@swc/core": "^1.2.218",
-    "@swc/jest": "^0.2.22",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.3.0",
-    "@types/file-saver": "^2.0.5",
-    "@types/jest": "^28.1.6",
-    "@types/lodash": "^4.14.182",
-    "@types/node": "18.0.6",
-    "@types/react": "18.0.15",
-    "@types/react-custom-scrollbars": "^4.0.10",
-    "@types/react-dom": "18.0.6",
-    "@types/react-redux": "^7.1.24",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
-    "@vitejs/plugin-react": "^2.0.0",
-    "aws-sdk": "^2.1181.0",
-    "bootstrap": "^5.3.3",
-    "cross-env": "^10.0.0",
-    "echarts": "^5.5.1",
+    "@javascript-obfuscator/escodegen": "2.3.0",
+    "@javascript-obfuscator/estraverse": "5.4.0",
+    "@popperjs/core": "^2",
+    "@redux-devtools/core": "^3",
+    "@swc/core": "^1",
+    "@swc/jest": "^0",
+    "@testing-library/jest-dom": "^5",
+    "@testing-library/react": "^13",
+    "@testing-library/user-event": "^14",
+    "@types/file-saver": "^2",
+    "@types/jest": "^28",
+    "@types/lodash": "^4",
+    "@types/node": "^18",
+    "@types/react": "^18",
+    "@types/react-custom-scrollbars": "^4",
+    "@types/react-dom": "^18",
+    "@types/react-redux": "^7",
+    "@types/uuid": "^8",
+    "@typescript-eslint/eslint-plugin": "^5",
+    "@typescript-eslint/parser": "^5",
+    "@vitejs/plugin-react": "^2",
+    "cross-env": "^7",
     "electron": "^29.4.6",
-    "electron-rebuild": "^3.2.9",
-    "eslint": "^8.20.0",
-    "eslint-plugin-react": "^7.30.1",
-    "font-awesome": "^4.7.0",
-    "identity-obj-proxy": "^3.0.0",
-    "imageinfo": "^1.0.4",
-    "javascript-obfuscator": "^4.1.1",
-    "jest": "^28.1.3",
-    "jest-environment-jsdom": "^28.1.3",
-    "mock-aws-s3": "^4.0.2",
-    "nock": "^13.2.9",
-    "node-abi": "^3.54.0",
-    "optiscroll": "^3.2.1",
-    "popper.js": "^1.16.1",
-    "prettier": "^2.7.1",
-    "rimraf": "^6.0.1",
-    "sass": "^1.54.0",
-    "silly-datetime": "^0.1.2",
-    "terser": "^5.14.2",
-    "ts-jest": "^28.0.7",
-    "ts-node": "^10.9.1",
-    "tslint": "^6.1.3",
-    "tslint-react": "^5.0.0",
-    "typescript": "4.7.4",
-    "vite": "^3.0.2",
-    "vite-tsconfig-paths": "^3.5.0",
-    "webpack": "^5.101.3",
-    "webpack-cli": "^6.0.1",
-    "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0",
-    "xterm-addon-web-links": "^0.9.0"
+    "electron-builder": "26.0.12",
+    "electron-rebuild": "^3",
+    "eslint": "^8",
+    "eslint-plugin-react": "^7",
+    "javascript-obfuscator": "^4",
+    "jest": "^28",
+    "jest-environment-jsdom": "^28",
+    "prettier": "^2",
+    "rimraf": "^5",
+    "sass": "^1",
+    "terser": "^5",
+    "ts-jest": "^28",
+    "ts-node": "^10",
+    "tslint": "^6",
+    "tslint-react": "^5",
+    "typescript": "~4.7",
+    "vite": "^3",
+    "vite-tsconfig-paths": "^4",
+    "webpack": "^5",
+    "webpack-cli": "^5"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@mui/material": "^5.9.1",
-    "@mui/system": "^5.9.1",
-    "@popperjs/core": "^2.11.8",
-    "@serialport/bindings-cpp": "^12.0.0",
-    "@serialport/parser-readline": "^12.0.0",
-    "@serialport/stream": "^12.0.0",
+    "@babel/runtime": "^7.28.3",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@mui/material": "^5",
+    "@mui/system": "^5",
+    "@popperjs/core": "^2",
+    "@serialport/bindings-cpp": "^12",
+    "@serialport/parser-readline": "^12",
+    "@serialport/stream": "^12",
     "@tensorflow-models/coco-ssd": "2.2.2",
-    "@tensorflow/tfjs": "4.2.0",
-    "@tensorflow/tfjs-backend-cpu": "^3.19.0",
-    "@tensorflow/tfjs-backend-webgl": "^3.19.0",
-    "@tensorflow/tfjs-core": "^3.19.0",
-    "asar": "^3.2.0",
-    "axios": "^1.1.3",
-    "bootstrap": "^5.3.3",
+    "@tensorflow/tfjs-backend-cpu": "^3",
+    "@tensorflow/tfjs-backend-webgl": "^3",
+    "@tensorflow/tfjs-core": "^3",
+    "asar": "^3",
+    "axios": "^1",
+    "bootstrap": "^5",
     "bytenode": "^1.5.7",
-    "classnames": "^2.3.1",
-    "echarts": "^5.5.1",
-    "electron-squirrel-startup": "^1.0.1",
-    "electron-store": "^8.1.0",
-    "file-saver": "^2.0.5",
-    "font-awesome": "^4.7.0",
-    "imageinfo": "^1.0.4",
-    "jszip": "^3.10.0",
-    "lodash": "^4.17.21",
-    "mobile-detect": "^1.4.5",
-    "moment": "^2.29.4",
-    "nan": "^2.20.0",
-    "node-pty": "^1.0.0",
-    "optiscroll": "^3.2.1",
-    "popper.js": "^1.16.1",
+    "classnames": "^2",
+    "echarts": "^5",
+    "electron-squirrel-startup": "^1",
+    "electron-store": "^8",
+    "file-saver": "^2",
+    "font-awesome": "^4",
+    "imageinfo": "^1",
+    "js-tokens": "^9.0.1",
+    "jszip": "^3",
+    "lodash": "^4",
+    "mobile-detect": "^1",
+    "moment": "^2",
+    "nan": "^2",
+    "node-pty": "^1",
+    "optiscroll": "^3",
+    "popper.js": "^1",
     "react": "18.2.0",
-    "react-custom-scrollbars-2": "^4.5.0",
+    "react-custom-scrollbars-2": "^4",
     "react-dom": "18.2.0",
-    "react-dropzone": "^14.2.2",
-    "react-redux": "^8.0.2",
-    "react-spinners": "^0.13.3",
-    "redux": "^4.2.0",
-    "serialport": "^12.0.0",
-    "silly-datetime": "^0.1.2",
-    "uuid": "^8.3.2",
-    "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0",
-    "xterm-addon-web-links": "^0.9.0",
-    "yolov5js": "^1.0.0"
+    "react-dropzone": "^14",
+    "react-redux": "^8",
+    "react-spinners": "^0",
+    "redux": "^4",
+    "serialport": "^12",
+    "silly-datetime": "^0",
+    "uuid": "^8",
+    "xterm": "^5",
+    "xterm-addon-fit": "^0",
+    "xterm-addon-web-links": "^0",
+    "yolov5js": "^1"
   },
   "volta": {
     "node": "18.20.8"
