更新打包配置，添加main.js和utils文件夹

--- a/package.json
+++ b/package.json
@@ -68,7 +68,9 @@
       "auth.html",
       "mainpage.html",
       "preload.js",
-      "loading.html"
+      "loading.html",
+      "utils{,/**}",
+      "main.js"
     ],
     "extraResources": [
       {
